--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -10,6 +10,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank">猪肉催生河南新首富 身家超千亿</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/6b9e95008a2b06c4626f19d9e5e56c0a-150x120.jpg" align ="left"></a>受非洲猪瘟疫情影响，中国大陆猪肉价格暴涨，秦英林凭借牧原股份的股价大涨，不仅在2019年晋升河南首富，其家族财富更是在福布斯内地富豪榜上，反超王健林、李彦宏、雷军等众多商界大佬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/15/n11723519.md#1" target="_blank">大到暴雪 京津冀等多地积雪将超8厘米</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/15/n11723519.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/snow-1148773_1920-150x120.jpg" align ="left"></a>12月15日，大陆中央气象台预计，今天（15日）下午至明天下午，京津冀等地局部地区的积雪达8厘米以上。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722829.md#1" target="_blank">四川珙县煤矿发生渗水事故 致4死14人失踪</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722829.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d2d70a1d323385826458f180991ec984-150x120.jpg" align ="left"></a>四川省宜宾市珙县一座煤矿日前发生渗水事故，目前已造成4人遇难，14人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 1:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11746539.md#1" target="_blank">中国多省进入流感流行期 甲型流感为主</a><br></h3>近期，中国大陆部分省份已进入流感流行季节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/25/n11744109.md#1" target="_blank">重庆男子坠楼砸中2女中学生 3人均死亡</a><br></h3>12月24日晚，重庆沙坪坝区一男子在三峡广场煌华新纪元购物广场坠亡，砸倒两名过路人，3人均死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11742586.md#1" target="_blank">河南信阳一载客31人大巴翻车 致2死多伤</a><br></h3>12月24日，河南信阳市一辆大巴在107国道柳林乡路段上，疑失控冲出路基后侧翻，导致2死多伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11740164.md#1" target="_blank">哈尔滨一污水管网施工坍塌 4人被埋</a><br></h3>12月23日上午10时15分，黑龙江省哈尔滨市阿城区新利街污水管网工程施工现场塌方，现场作业5人，塌方时4人被埋，1人被救出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:49 PM							</td></tr>
@@ -35,6 +36,5 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/14/n11722469.md#1" target="_blank">山东一动物园维修工疑被机器挤压身亡</a><br></h3>12月13日，山东济南市天桥区的济南动物园一名维修工人疑似被游乐场机器挤压，当场身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_4.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/ncid280_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_4.htm">http://www.epochtimes.com/gb/ncid280_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
