--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -27,7 +27,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/140826125810100311-600x400-150x120.jpg" align ="left"></a>他经营网络赌球及百家乐博彩生意，有着稳定的下线代理和赌徒会员，还有为他算账、收账、放高利贷平帐的团队，这为他带来每月好几十万的收入。更多时间，他都是在吃喝玩乐中结交人脉，为新的生意创造合作机会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11741773.md#1" target="_blank">“江歌案”刘鑫改名收打赏 攻击江母微博被封</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/24/n11741773.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/0000-VCG111141203450-2_2-150x120.jpg" align ="left"></a>2016年中国留日女研究生江歌接闺蜜刘鑫一起回家时，被闺蜜男友用刀刺死。事隔3年，刘鑫改名、利用江歌遇害一事在个人微博上持续攻击江歌的妈妈，并接受网络粉丝上万元的打赏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 12:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank">马思纯零台词诠释抑郁症 网友赞：眼神都是戏</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ma-sichun-150x120.jpg" align ="left"></a>与周冬雨一起夺得金马双影后的大陆女星马思纯，近日在一短片中零台词诠释忧郁症。在一分多钟的时间里，她展现了一个人从绝望到释然的全过程。网友纷纷夸赞：“眼神里都是戏！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11740739.md#1" target="_blank">港教区吁政府聆听民意 成立独立调查委员会</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/23/n11740739.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3f44a79b591ec121cc2f5971699cbd48-150x120.png" align ="left"></a>香港在反送中运动中迎来了首个圣诞节，警方已开始在此前频发冲突的区域街头加强警力。天主教香港教区宗座署理汤汉枢机在圣诞贺辞中，呼吁政府聆听民意，尽快成立“独立调查委员会”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:42 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/28/n11750711.md#1" target="_blank">每日三退声明精选（2019/12/27）</a><br></h3>我是一名普通的企业员工，10多年前领导让我加入中共邪党，我没有答应。因为我深知恶党的邪恶，心里深深的抵触它。今年在我不知情的情况下，领导开会通过了我入党的决定。事后以政治任务通知我参加学习，我内心无比痛苦，不想加入这邪恶的组织。现在我郑重提出退出中国共产邪党、中国共青团、中国少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/27/n11748143.md#1" target="_blank">每日三退声明精选（2019/12/26）</a><br></h3>中共的各级官员不但个个都是贪污犯盗国贼，还要利用手中控制的媒体网路五毛来带节奏维护其一党独裁专制，在没有言论自由的大环境下还要严控意识形态，彻底看清共产党的流氓无赖嘴脸，声明退出共青团！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 10:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11746220.md#1" target="_blank">湖北一女婴被丢垃圾桶4小时 仍无父母下落</a><br></h3>近日，湖北黄石市一名刚出生不久的女婴，被父母遗弃在垃圾桶内4个多小时，后被环卫工人发现、并送院抢救。但目前仍未找到其父母。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 2:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/25/n11745633.md#1" target="_blank">周杰伦MV奶茶店 大陆现110多家山寨门市</a><br></h3>由歌手周杰伦MV捧红的奶茶店，如今在中国遭到山寨包围。全中国目前有110多家山寨的“麦吉 machi machi”加盟店，上海、广州、深圳等地都有冒牌货。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:14 AM							</td></tr>
