--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -34,7 +34,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/8/8/n1795726.md#1" target="_blank">谈诗词曲写作的守文和创新</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/8/8/n1795726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/1607102228122483-150x120.jpg" align ="left"></a>中华文化是神传文化，唐诗、宋词、元曲等都是其中的一部分。守文的意思是恪守古人留下的写作原则。因为诗词曲都是由文字组成的，所以这里先谈谈文字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/27/n11748544.md#1" target="_blank">天地清明引(158) 东流水－十年生死4</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/27/n11748544.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/09/0213-3-150x120.jpg" align ="left"></a>祁连叛军再现京师，纳兰召集三将议事，一夜未得安宁。清晨，宫中侍卫通传，言王上急召武平王与莫将军觐见。永延、哈尔奇被拦宫门之外，仅由二人进宫面圣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11768068.md#1" target="_blank">【典故新解】食指大动：一顿鼋宴 枉送君臣性命</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11768068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/getCollectionImage-2-150x120.jpg" align ="left"></a>春秋时期，郑灵公姬夷继位的第一年，楚国人进献了一只巨鼋。郑灵公很高兴，打算开鼋宴，与大臣们分享鲜美、大补的鼋肉羹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:14 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11747583.md#1" target="_blank">唐伯虎之梦   苏东坡词文揭谜底</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/26/n11747583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/getCollectionImage-150x120.jpg" align ="left"></a>听说过李白梦笔生花，其诗文似锦似绣。是否听说过梦墨的故事？宋朝苏东坡写过一首词，时隔四百年后，其中的一句竟成了唐伯虎的谶语。为其落幕的人生画上句点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:44 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11774989.md#1" target="_blank">七绝：响雪</a><br></h3> 雪落三更响玉声， 雄鸡骤起九千鸣。 风摇树挂悬银剑， 横扫人间路不平！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11774926.md#1" target="_blank">七律：寄白居易</a><br></h3> 作诗如话多深味，愁唱醉吟悲抚桐。 杨柳千姿舞腰细，樱桃一点似唇红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772770.md#1" target="_blank">诗歌：咏雪二首</a><br></h3> 一 玉殿琼楼下九重， 千树梨花舞寒风。 谁说严冬欠佳色， 银装素裹也怡情！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772696.md#1" target="_blank">童诗：破了一个洞</a><br></h3>啵！爸爸的外套破了一个洞
