--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -44,7 +44,7 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792093.md#1">广东高层多空降 分析：北京忌惮地方势力</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793250.md#1">蓬佩奥：与中共做生意 硅谷科技公司要三思</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792673.md#1">南昌十多名法轮功学员遭中共非法判刑</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793178.md#1">大陆学者辟谣食品安全问题? 被事实打脸</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793178.md#1">大陆学者辟谣食品安全问题 被事实打脸</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793313.md#1">美国与各国联手严审中共海外投资</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792728.md#1">德国病毒专家：武汉肺炎类似SARS病毒</a><br>
