--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,8 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793432.md#1">周晓辉：班农证川普弃绥靖政策 中共去日无多</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793496.md#1">王友群：台湾大选 中共完败 习近平咋办</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792410.md#1">袁斌：从李敖儿子微博被封看蔡英文何以当选</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792333.md#1">横河：伊朗放空炮 王立强被威胁 中共连失算</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791447.md#1">黄天辰：怀孕母牛下跪获救 那几亿胎儿何在？</a><br>
@@ -20,8 +22,6 @@
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11791025.md#1">王友群：蔡英文胜选获国际赞赏的五个原因</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789532.md#1">陈思敏：中国足球资金寒冬曝经济实情</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789989.md#1">程晓容：60国贺蔡英文胜选 中共输在哪里？</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11789473.md#1">李铭：泛滥的酷刑迫害</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/13/n11788943.md#1">文武：民进党选举的胜利在于选择认清中共邪恶</a><br>
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
