--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793512.md#1">中共会否终止ECFA？媒体人及网民热议</a><br>
-<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792863.md#1">北京同乡会华盛顿办晚会演样板戏遭轰</a><br>
+<a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11792863.md#1">北京同乡会华盛顿州办晚会演样板戏遭轰</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793560.md#1">妻子被“潜规则” 男子起诉北影副校长</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793368.md#1">小米和华为互撕 指荣耀手机库存大量积压</a><br>
 <a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/14/n11793432.md#1">周晓辉：班农证川普弃绥靖政策 中共去日无多</a><br>
